# Compute-Shaders-Testing

./: CMakeLists.txt  CMakePresets.json  README.md  computeShader2.cs  main.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6_camera.cpp  test7_secuencial.cpp
include/: shader_c.h
src/: CMakeLists.txt  camera3.cpp  shader_c.cpp  shader_m.cpp
